fix(React): align the product image vertically in the center
When a product item was shown on the page, sometimes the product image
would be aligned in the top corner. This commit fixes this behavior by
explicitly aligning it in the center (vertically and horizontally).

--- a/client/src/components/ProductItem/ProductItem.module.css
+++ b/client/src/components/ProductItem/ProductItem.module.css
@@ -92,9 +92,9 @@
     max-width: 100%;
     max-height: 200px;
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(-50%);
     transition: 0.5s opacity ease;
 }
 
